# speaking

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
app/: page.tsx
app/openai/audio-speech/: route.ts
app/openai/audio-transcriptions/: route.ts
app/openai/chat-completions/: route.ts
components/: MessageItem.tsx  MessageList.tsx  RecordingButton.tsx
hooks/: useRecord.ts  useSpeech.ts
src/speaking/: __init__.py  main.py
types/: message.ts  status.ts
