[project]
name = "speaking"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nakamura Yuji", email = "57951904+Yuji-207@users.noreply.github.com" }
]
dependencies = [
    "openai>=1.3.5",
    "streamlit>=1.28.2",
    "audio-recorder-streamlit>=0.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
